# code

./: AB.trace  ablog.txt  beosztosfile.csv  beosztosfile.py  beosztott.csv  corgi.txt  csimpi.py  deliver_a_good.txt  deliver_b_good.txt  dicetester.py  ex1.py  ex13.py  ex14.py  ex15.py  ex15_sample.txt  ex16.py  ex17.py  ex18.py  ex19.py  ex2.py  ex20.py  ex21.py  ex22.py  ex23.py  ex24.py  ex25.py  ex26.py  ex3.py  ex41.py  ex42.py  ex43.py  ex6.py  ex7.py  ex8.py  ex9.py  exercise 25 python session.py  gamescsut26tt.csv  git upload fail.txt  git upload something.txt  gyak1.py  (+41 more)
class ex/: ex45.py  layout_ex45.py  move_actions_ex45.py  room_1_ex45.py  room_2_ex45.py  room_3_ex45.py  room_4_ex45.py  room_actions_ex45.py  room_ex45.py  walk_ex45.py
ex48/: dolog.py  ex48_test.py  lexicon.py  parser.py  parser_test.py
flask-tutorial/: hello.py
flask-tutorial/flaskr/: __init__.py  auth.py  blog.py  db.py
static/stylesheets/: style.css
tanulosvalami/: feedback.db  pyproject.toml  test_models.py
tanulosvalami/src/tanulosvalami/: database.py  feedback.db  main.py
tanulosvalami/src/tanulosvalami/api/: event_routes.py  feedback_routes.py
tanulosvalami/src/tanulosvalami/models/: __init__.py  event.py  feedback.py
tanulosvalami/src/tanulosvalami/repositories/: event_repository.py  feedback_repository.py
tanulosvalami/src/tanulosvalami/schemas/: event.py  feedback.py
tanulosvalami/src/tanulosvalami/services/: event_service.py  feedback_service.py
tanulosvalami/tests/api/: test_event_routes.py
templates/: de_vat.html  fr_vat.html  hu_vat.html  index.html
(+12 files in other folders)
